@@ -1,0 +1,1 @@
+ALTER TABLE `Fleet_Analytics` ADD COLUMN `FA_Total_Storage_Available` BIGINT NOT NULL;
