@@ -29,4 +29,23 @@ class FetchLatestData
         $do->execute();
         return $do->fetchAll(\PDO::FETCH_ASSOC);
     }
+
+    public function lastEntry()
+    {
+        $sql = "SELECT
+                    `FA_Date_Created` as `dateTime`,
+                    `FA_Total_Memory_Usage` as `memoryUsage`,
+                    `FA_Active_Containers` as `activeContainers`,
+                    `FA_Total_Storage_Usage` as `storageUsage`,
+                    `FA_Total_Storage_Available` as `storageAvailable`
+                FROM
+                    `Fleet_Analytics`
+                ORDER BY
+                    `FA_ID` DESC
+                LIMIT 1
+                ";
+        $do = $this->database->prepare($sql);
+        $do->execute();
+        return $do->fetch(\PDO::FETCH_ASSOC);
+    }
 }
