@@ -1,6 +1,6 @@
 <div id="overviewBox" class="boxSlide">
     <div class="row">
-          <div class="col-lg-12 card-columns">
+          <div class="col-lg-5">
               <div class="card bg-dark">
                   <div class="card-header">
                       <h4>Hosts</h4>
@@ -18,52 +18,66 @@
                       </table>
                   </div>
               </div>
-              <div class="card bg-dark">
-                  <div class="card-header">
-                      <h4>Current Memory Usage</h4>
-                  </div>
-                  <div class="card-body" id="currentMemoryUsageCardBody">
-                  </div>
-              </div>
-              <div class="card bg-dark">
-                  <div class="card-header">
-                      <h4> Recent Memory Usage </h4>
-                  </div>
-                  <div class="card-body" >
-                      <div class="alert alert-warning text-center notEnoughData">
-                          Not enough data check again in 10 minutes
-                      </div>
-                      <div id="dashboardMemoryHistoryBox">
-                      </div>
-                  </div>
-              </div>
-              <div class="card bg-dark">
-                  <div class="card-header">
-                      <h4> Recent Running Instances </h4>
-                  </div>
-                  <div class="card-body" >
-                      <div class="alert alert-warning text-center notEnoughData">
-                          Not enough data check again in 10 minutes
-                      </div>
-                      <div id="dashboardRunningInstancesBox">
-                      </div>
-                  </div>
-              </div>
-              <div class="card bg-dark">
-                  <div class="card-header">
-                      <h4>Recent Storage Usage</h4>
-                  </div>
-                  <div class="card-body" >
-                      <div class="alert alert-warning text-center notEnoughData">
-                          Not enough data check again in 10 minutes
-                      </div>
-                      <div id="dashboardStorageHistoryBox">
-                      </div>
-                  </div>
-              </div>
           </div>
-      <!-- /.col-->
+          <div class="col-lg-7">
+              <div class="row">
+                  <div class="col-md-6">
+                      <div class="card bg-dark">
+                          <div class="card-header">
+                              <h4>Current Usage</h4>
+                          </div>
+                          <div class="card-body" id="currentMemoryUsageCardBody">
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-md-6">
+                      <div class="card bg-dark">
+                          <div class="card-header">
+                              <h4> Memory Usage </h4>
+                          </div>
+                          <div class="card-body" >
+                              <div class="alert alert-warning text-center notEnoughData">
+                                  Not enough data check again in 10 minutes
+                              </div>
+                              <div id="dashboardMemoryHistoryBox">
+                              </div>
+                          </div>
+                      </div>
+
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-6">
+                      <div class="card bg-dark">
+                          <div class="card-header">
+                              <h4> Running Instances </h4>
+                          </div>
+                          <div class="card-body" >
+                              <div class="alert alert-warning text-center notEnoughData">
+                                  Not enough data check again in 10 minutes
+                              </div>
+                              <div id="dashboardRunningInstancesBox">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-md-6">
+                      <div class="card bg-dark">
+                          <div class="card-header">
+                              <h4>Storage Usage</h4>
+                          </div>
+                          <div class="card-body" >
+                              <div class="alert alert-warning text-center notEnoughData">
+                                  Not enough data check again in 10 minutes
+                              </div>
+                              <div id="dashboardStorageHistoryBox">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
     </div>
+</div>
 </div>
 
 <script>
